trunk/Archive/0915448a9683f61fde165340c3a579d6-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:2: warning: style of line directive is a GCC extension [enabled by default]
 #0  0x00007fffffffe7b0 in ?? ()
  ^
main.cpp:1:5: error: "0x00007fffffffe7b0" is not a valid filename
 #0  0x00007fffffffe7b0 in ?? ()
     ^
main.cpp:2:2: warning: style of line directive is a GCC extension [enabled by default]
 #1  0x000000000040320b in int Centurion::AudioStream::CallbackDispatcher<int (*)(void const*, void*, unsigned long, PaStreamCallbackTimeInfo const*, unsigned long)>(void const*, void*, unsigned long, PaStreamCallbackTimeInfo const*, unsigned long, void*) ()
  ^
main.cpp:2:5: error: "0x000000000040320b" is not a valid filename
 #1  0x000000000040320b in int Centurion::AudioStream::CallbackDispatcher<int (*)(void const*, void*, unsigned long, PaStreamCallbackTimeInfo const*, unsigned long)>(void const*, void*, unsigned long, PaStreamCallbackTimeInfo const*, unsigned long, void*) ()
     ^
main.cpp:3:2: warning: style of line directive is a GCC extension [enabled by default]
 #2  0x00007ffff7bb4053 in ?? () from /usr/lib/x86_64-linux-gnu/libportaudio.so.2
  ^
main.cpp:3:5: error: "0x00007ffff7bb4053" is not a valid filename
 #2  0x00007ffff7bb4053 in ?? () from /usr/lib/x86_64-linux-gnu/libportaudio.so.2
     ^
main.cpp:4:2: warning: style of line directive is a GCC extension [enabled by default]
 #3  0x00007ffff7bb6045 in ?? () from /usr/lib/x86_64-linux-gnu/libportaudio.so.2
  ^
main.cpp:4:5: error: "0x00007ffff7bb6045" is not a valid filename
 #3  0x00007ffff7bb6045 in ?? () from /usr/lib/x86_64-linux-gnu/libportaudio.so.2
     ^
main.cpp:5:2: warning: style of line directive is a GCC extension [enabled by default]
 #4  0x00007ffff7bbcf68 in ?? () from /usr/lib/x86_64-linux-gnu/libportaudio.so.2
  ^
main.cpp:5:5: error: "0x00007ffff7bbcf68" is not a valid filename
 #4  0x00007ffff7bbcf68 in ?? () from /usr/lib/x86_64-linux-gnu/libportaudio.so.2
     ^
main.cpp:6:2: warning: style of line directive is a GCC extension [enabled by default]
 #5  0x00007ffff6676e9a in start_thread (arg=0x7ffff32fa700) at pthread_create.c:308
  ^
main.cpp:6:5: error: "0x00007ffff6676e9a" is not a valid filename
 #5  0x00007ffff6676e9a in start_thread (arg=0x7ffff32fa700) at pthread_create.c:308
     ^
main.cpp:7:2: warning: style of line directive is a GCC extension [enabled by default]
 #6  0x00007ffff70caccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
  ^
main.cpp:7:5: error: "0x00007ffff70caccd" is not a valid filename
 #6  0x00007ffff70caccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
     ^
main.cpp:8:2: warning: style of line directive is a GCC extension [enabled by default]
 #7  0x0000000000000000 in ?? ()
  ^
main.cpp:8:5: error: "0x0000000000000000" is not a valid filename
 #7  0x0000000000000000 in ?? ()
     ^
